# Cursor_For_Video_Editing

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  verify_setup.py
experiments/: level_1.ipynb
