[project]
name = "cursor-for-video-editing"
version = "0.1.0"
description = "Multimodal AI agent for automated video editing workflows"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langgraph==0.2.28",
    "langchain==0.3.7",
    "langchain-groq==0.2.1",
    "langchain-google-genai==2.0.4",
    "fastapi==0.115.4",
    "uvicorn==0.32.0",
    "python-multipart==0.0.12",
    "pydantic==2.9.2",
    "opencv-python==4.10.0.84",
    "moviepy==1.0.3",
    "openai-whisper==20240930",
    "ffmpeg-python==0.2.0",
    "faiss-cpu==1.9.0",
    "sentence-transformers==3.2.1",
    "python-dotenv==1.0.1",
    "httpx==0.27.2",
    "pillow==11.0.0",
    "numpy==1.26.4",
    "groq==0.11.0",
]

[tool.uv.extra-build-dependencies]
openai-whisper = ["setuptools<81"]
